<resources>
    <string name="app_name">TestApp</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="oldPassword">Old Password</string>
    <string name="password">Password</string>
    <string name="confPassword">Confirm Password</string>

</resources>