<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:hint="@string/name"
        android:imeOptions="flagNoExtractUi|actionNext"
        android:inputType="textNoSuggestions"
        android:paddingStart="@dimen/fab_margin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:hint="@string/email"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/fab_margin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:hint="@string/oldPassword"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="textNoSuggestions"
            android:paddingStart="@dimen/fab_margin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:hint="@string/password"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="textNoSuggestions"
            android:paddingStart="@dimen/fab_margin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCfPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:hint="@string/confPassword"
            android:imeOptions="flagNoExtractUi|actionNext"
            android:inputType="textNoSuggestions"
            android:paddingStart="@dimen/fab_margin" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:text="Save"
        android:textSize="32sp" />
</LinearLayout>